--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ history.pushState(stateObj, "page 2", "bar.html");
 </script>
 <body bgcolor="#eeeeee">
 <div class="w3-container w3-teal">
-	<h1 onclick="document.title='boywigh';">A boywigh's Site</h1>
+	<h1 onclick="document.title='boywigh';" style="width:100%;overflow:hidden;height:44px">A boywigh's Site</h1>
 </div>
 <div class="w3-content">
 	<button class="w3-button w3-red" onclick="document.title=
