--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ function changeContent(ffile,ttitle){
 	//toggle('ameetmenu');
 	document.title=ttitle;
 	var stateObj = { index: "bar" };
-history.pushState(stateObj, "page 2", "bar.html");
+history.pushState(stateObj, "page 2", "?chapter1");
 }
 </script>
 <body bgcolor="#eeeeee">
