--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ function changeContent(ffile,ttitle){
 	loadf('content',ffile);
 	//toggle('ameetmenu');
 	document.title=ttitle;
-	var stateObj = { index: "bar" };
-history.pushState(stateObj, "page 2", "?chapter1");
+	//var stateObj = { index: "bar" };
+history.pushState(null, null, "?chapter1");
 }
 </script>
 <body bgcolor="#eeeeee">
