--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ var xhr = new XMLHttpRequest();
     xhr.open('GET', kk);
     xhr.send();
 }
-function changeContent(ffile,ttitle){
+function changeContent(ffile,ttitle,url){
 	loadf('content',ffile);
 	//toggle('ameetmenu');
 	document.title=ttitle;
 	//var stateObj = { index: "bar" };
-history.pushState(null, null, "?chapter1");
+history.pushState(null, null, '?'+url);
 }
 </script>
 <body bgcolor="#eeeeee">
@@ -42,13 +42,11 @@ history.pushState(null, null, "?chapter1");
 		<span onclick="this.parentElement.style.display='none'"
 			class="w3-button w3-red w3-display-topright">x</span>
 		<span class="w3-button" onclick="changeContent('doc/chap1.txt',
-			'Chapter 1 : A Meeting | boywigh');">Chapter 1</span>
-		<span class="w3-button" onclick="loadf('content','doc/chap2.txt');
-			toggle('ameetmenu');document.title=
-			'Chapter 2 : A Meeting | boywigh';">Chapter 2</span>
-		<span class="w3-button" onclick="loadf('content','doc/chap3.txt');
-			toggle('ameetmenu');document.title=
-			'Chapter 3 : A Meeting | boywigh';">Chapter 3</span>
+			'Chapter 1 : A Meeting | boywigh','chap=1');">Chapter 1</span>
+		<span class="w3-button" onclick="changeContent('doc/chap1.txt',
+			'Chapter 2 : A Meeting | boywigh','chap=2');"">Chapter 2</span>
+		<span class="w3-button" onclick="changeContent('doc/chap1.txt',
+			'Chapter 3 : A Meeting | boywigh','chap=3');"">Chapter 3</span>
 	</div>
 	<div class="w3-container w3-leftbar w3-border-blue w3-pale-blue">
 	<div>
