--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ history.pushState(null, null, '?'+url);
 		<span class="w3-button" onclick="changeContent('doc/chap1.txt',
 			'Chapter 1 : A Meeting | boywigh','chap=1');">Chapter 1</span>
 		<span class="w3-button" onclick="changeContent('doc/chap1.txt',
-			'Chapter 2 : A Meeting | boywigh','chap=2');"">Chapter 2</span>
+			'Chapter 2 : A Meeting | boywigh','chap=2');">Chapter 2</span>
 		<span class="w3-button" onclick="changeContent('doc/chap1.txt',
-			'Chapter 3 : A Meeting | boywigh','chap=3');"">Chapter 3</span>
+			'Chapter 3 : A Meeting | boywigh','chap=3');">Chapter 3</span>
 	</div>
 	<div class="w3-container w3-leftbar w3-border-blue w3-pale-blue">
 	<div>
