--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ history.pushState(null, null, '?'+url);
 }
 </script>
 <body bgcolor="#eeeeee">
-<div class="w3-container w3-teal">
-	<h1 onclick="document.title='boywigh';" style="position:fixed;">A boywigh's Site</h1>
+<div class="w3-container w3-teal" style="position:fixed;">
+	<h1 onclick="document.title='boywigh';">A boywigh's Site</h1>
 </div>
 <div class="w3-content">
 	<button class="w3-button w3-red" onclick="document.title=
