--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ history.pushState(null, null, '?'+url);
 }
 </script>
 <body bgcolor="#eeeeee">
-<div class="w3-container w3-teal" style="position:fixed;">
+<div class="w3-container w3-teal" style="position:fixed;width: 100%;z-index: 99;">
 	<h1 onclick="document.title='boywigh';">A boywigh's Site</h1>
 </div>
 <div class="w3-content">
