--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ history.pushState(null, null, '?'+url);
 }
 </script>
 <body bgcolor="#eeeeee">
+<div class="w3-cointainer">
 <div class="w3-container w3-teal" style="position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -58,6 +59,6 @@ history.pushState(null, null, '?'+url);
 	</div>
 	</div>
 </div>
-
+</div>
 </body>
 </html> 
