remove json.reponse

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ function loadf(dd,kk){
         return;
       }
 
-      response.json().then(function(data) {
+      .then(function(data) {
         document.getElementById(dd).innerHTML = data;
       });
     }
