--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@ history.pushState(null, null, url);
 				float:left;
 				text-align:right;
 				padding:0px 0px 0px 0px;">
-	<p onclick="document.title='boywigh';"
-		style = "font-size:2vw;
-		padding-top:0px;
+	<h4 onclick="document.title='boywigh';"
+		style = "padding:0px 0px 0px 0px;
 		margin-top: 0px;
 		margin-bottom: 0px;
-		margin-right : 20px;">A boywigh's Site</p></div>
+		margin-right : 20px;">A boywigh's Site</h4></div>
 	<div  style = "width : 70%;">
 		<button class="w3-button w3-red" onclick="changeContent('',
 			'A Meeting','ameeting');">A Meeting</button> 
