--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function changeContent(ffile,ttitle,url){
 	toggle('ameetmenu');
 	document.title=ttitle;
 	//var stateObj = { index: "bar" };
-history.pushState(null, null, url);
+//history.pushState(null, null, url);
 }
 </script>
 <body bgcolor="#eeeeee">
