--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title id='title'>boywigh</title>
+<title id='title'>__A_Re__</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8"> 
 <link rel="stylesheet" href="stylesheet/w3.css">
@@ -48,11 +48,12 @@ function changeContent(ffile,ttitle,url){
 				float:left;
 				text-align:right;
 				padding:0px 0px 0px 0px;">
-	<h4 onclick="document.title='boywigh';"
+	<p class="header" onclick="document.title='boywigh';"
 		style = "padding:0px 0px 0px 0px;
 		margin-top: 0px;
 		margin-bottom: 0px;
-		margin-right : 20px;">A boywigh's Site</h4></div>
+		margin-right : 20px;
+        font-size-adjust: 0.58">__A_Re__</p></div>
 	<div  style = "width : 70%;">
 		<button class="w3-button w3-red" onclick="changeContent('',
 			'A Meeting','ameeting');">A Meeting</button> 
