--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ function changeContent(ffile,ttitle,url){
   <div style = "width : 30%;
 				float:left;
 				text-align:right;
-				padding:0px 0px 0px 0px;">
+				padding:0px 0px 0px 0px;"><a href="/" style="text-decoration: none">
 	<p class="header" onclick="document.title='boywigh';"
 		style = "padding:0px 0px 0px 0px;
 		margin-top: 0px;
 		margin-bottom: 0px;
 		margin-right : 20px;
-        font-size-adjust: 0.58">__A_Re__</p></div>
+        font-size-adjust: 0.58">__A_Re__</p></a></div>
 	<div  style = "width : 70%;">
 		<button class="w3-button w3-red" onclick="changeContent('',
 			'A Meeting','ameeting');">A Meeting</button> 
